unpackaged/objects/Asset.object
<CustomObject>
  <fields>
    <fullName>ArticleNumberSKU__c</fullName>
    <label>Article Number (SKU)</label>
    <length>80</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Competitor_Product__c</fullName>
    <formula>Product_Name__r.Competitor_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Product?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>DSI_serial_number__c</fullName>
    <label>DSI serial number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>DistributorText__c</fullName>
    <label>Distributor</label>
    <length>200</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>InstalledBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installed by</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Installed by)</relationshipLabel>
    <relationshipName>Assets2</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Installed_At__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installed at</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Installed at)</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Manufacturer__c</fullName>
    <formula>Product_Name__r.Manufacturer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Product_Asset_Name__c</fullName>
    <description>To combine the Product Name from the ERP Products &amp; Non-ERP Products, only to be displayed on the related lists</description>
    <formula>Case ( RecordTypeId, '0120J000000cmqC',  Product2.Name ,  Product_Name__r.Name )</formula>
    <label>Product/Asset Name</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Category__c</fullName>
    <formula>Product_Name__r.Product_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Non_ERP_Products__c.Valid_in_my_Market__c</field>
        <operation>equals</operation>
        <value>True</value>
      </filterItems>
      <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Non_ERP_Products__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Revenue_Synergy_commodity_code__c</fullName>
    <label>Revenue Synergy commodity code</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SAPId__c</fullName>
    <externalId>true</externalId>
    <label>SAP Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>ServiceBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service by</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Service by)</relationshipLabel>
    <relationshipName>Assets3</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>T35_Name_UK__c</fullName>
    <formula>Product_Name__r.T35_Name_UK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T35 Name (UK)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Total_price__c</fullName>
    <formula>Price * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>sent_letter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>needed to track if a welcome letter was sent or not (Germany)</description>
    <label>sent letter</label>
    <type>Checkbox</type>
  </fields>
  <listViews>
    <fullName>AllAssets</fullName>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
  </listViews>
  <listViews>
    <fullName>CEREC_Installed_Machines</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>ASSET.NAME</field>
      <operation>contains</operation>
      <value>CEREC</value>
    </filters>
    <label>CEREC Installed Machines</label>
    <sharedTo>
      <role>Dentsply_IH_CEO</role>
      <roleAndSubordinates>NorthAmerica</roleAndSubordinates>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Primescan_Installed_Machines</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>ASSET.NAME</field>
      <operation>contains</operation>
      <value>Primescan</value>
    </filters>
    <label>Primescan Installed Machines</label>
    <sharedTo>
      <role>Dentsply_IH_CEO</role>
      <roleAndSubordinates>NorthAmerica</roleAndSubordinates>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Schick_Elite_Installed_Machines</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>ASSET.NAME</field>
      <operation>contains</operation>
      <value>Schick Elite</value>
    </filters>
    <label>Schick Elite Installed Machines</label>
    <sharedTo>
      <role>Dentsply_IH_CEO</role>
      <roleAndSubordinates>NorthAmerica</roleAndSubordinates>
    </sharedTo>
  </listViews>
  <recordTypes>
    <active>true</active>
    <description>For product profiling other than fixed assets, such as Atlantis, Xive., ...including competitors' products</description>
    <fullName>Account_Product_Profiling</fullName>
    <label>Account Product Profiling</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <description>For Competitors Fixed Assets such as NUSIMPLICITY, DGSHAPE ...etc</description>
    <fullName>Competitor_Fixed_Asset</fullName>
    <label>Competitor Fixed Asset</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <description>This should be added automatically via ERP integration or after closing opportunities.</description>
    <fullName>DS_Fixed_Asset</fullName>
    <label>DS Fixed Asset</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>siroForceIntegration</fullName>
    <label>siroForceIntegration</label>
  </recordTypes>
  <sharingModel>ControlledByParent</sharingModel>
  <validationRules>
    <fullName>SiroForceIntegrated</fullName>
    <active>true</active>
    <errorConditionFormula>$User.Full_Name__c &lt;&gt; 'Siroforce Integration' &amp;&amp; RecordType.DeveloperName ='siroForceIntegration'</errorConditionFormula>
    <errorMessage>This record is integrated from Siroforce. If you need to update the record it must be done in Siroforce.</errorMessage>
  </validationRules>
</CustomObject>